<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/editTextEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="16dp"
                android:hint="@string/hintEnterEmail"
                android:inputType="textEmailAddress"></EditText>

            <EditText
                android:id="@+id/editTextPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="16dp"
                android:hint="@string/hintEnterPassword"
                android:inputType="textPassword"></EditText>

            <Button
                android:id="@+id/buttonRegisterUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="16dp"
                android:background="@drawable/primary_background"
                android:textColor="@color/colorWhite"
                android:text="@string/buttonRegisterUser"></Button>

            <TextView
                android:id="@+id/textViewAlreadyRegistered"
                android:text="@string/textViewAlreadyRegistered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="16dp"
                android:textAlignment="center"></TextView>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>