<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/textViewEmailAddressLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="Email Address" />

            <EditText
                android:id="@+id/editTextEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="16dp"
                android:hint="@string/hintEnterEmail"
                android:inputType="textEmailAddress"></EditText>

            <TextView
                android:id="@+id/textViewPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="Password" />

            <EditText
                android:id="@+id/editTextPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="16dp"
                android:hint="@string/hintEnterPassword"
                android:inputType="textPassword"></EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonLoginAnon"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="16dp"
                    android:background="@color/colorLightGrey"
                    android:textColor="@color/colorPrimary"
                    android:visibility="gone"
                    android:text="@string/buttonLoginAnon"></Button>

                <Button
                    android:id="@+id/buttonLoginUser"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="16dp"
                    android:background="@drawable/primary_background"
                    android:textColor="@color/colorWhite"
                    android:text="@string/buttonLoginUser"></Button>

            </LinearLayout>

            <TextView
                android:id="@+id/textViewNotRegistered"
                android:text="@string/textViewNotRegistered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="16dp"></TextView>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>